# vibe-todo

./: .gitignore  .vibe_todo_evolution_state.json  ARCHITECTURE.md  BACKEND_DESIGN.md  CHANGELOG.md  EVOLUTION_PLAN.md  ITERATIONS.md  LICENSE  MANIFEST.in  NOVA_EVOLUTION.md  PROJECT_EVOLUTION.md  PUBLISH.md  QUALITY_ASSURANCE.md  README.md  RELEASE.md  TIME_INPUT_IMPLEMENTATION.md  USAGE_EXAMPLES.md  VERTICAL_AI_AGENT_REPORT.md  WEBUI_IMPROVEMENTS.md  demo_backends.py  evolve_project.py  fetch_and_send_hotnews.py  fetch_hotnews.py  happy_analysis_report.md  pyproject.toml  web4_conway_analysis.md
.github/: PYPI_SETUP.md
.github/workflows/: publish.yml
src/vibe_todo/: __init__.py  config.py
src/vibe_todo/adapters/: __init__.py  microsoft_adapter.py  notion_adapter.py
src/vibe_todo/cli/: __init__.py  main.py  views.py
src/vibe_todo/core/: __init__.py  ai_helper.py  models.py  service.py
src/vibe_todo/io/: __init__.py  exporter.py  formats.py  importer.py
src/vibe_todo/storage/: __init__.py  factory.py  repository.py
src/vibe_todo/web/: __init__.py  app.py
src/vibe_todo/web/templates/: index.html
src/vibe_todo/web/templates/partials/: task_list.html
tests/: test_ai_helper.py  test_batch.py  test_core.py  test_interactive_edit.py  test_io.py  test_notion_adapter.py  test_search_filter.py  test_storage.py  test_time_parsing.py  test_views.py
