[project]
name = "vibe-todo"
version = "0.1.3"
description = "A beautiful CLI and Web todo manager with multi-backend support (SQLite, Notion, Microsoft To Do)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Vibe Todo Contributors"}
]
keywords = ["todo", "task", "cli", "notion", "microsoft-todo", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "click>=8.1.7",
    "sqlalchemy>=2.0.23",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/acllm/vibe-todo"
Documentation = "https://github.com/acllm/vibe-todo#readme"
Repository = "https://github.com/acllm/vibe-todo"
Issues = "https://github.com/acllm/vibe-todo/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "build>=1.0.0",
    "twine>=4.0.0",
]
notion = [
    "notion-client>=2.2.1",
]
microsoft = [
    "msal>=1.26.0",
    "requests>=2.31.0",
]
all = [
    "notion-client>=2.2.1",
    "msal>=1.26.0",
    "requests>=2.31.0",
]

[project.scripts]
vibe = "vibe_todo.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
